IntelliJ code cleanup.